test_regress/t/t_fourstate_module_input_default_value_unsup.out
%Error-UNSUPPORTED: t/t_module_input_default_value.v:150:9: Cells with pins that are not a variable reference or a constant are not supported with  --fourstate
                                                          : ... note: In instance 't'
  150 |     (.i(logic0_from_some_function()),   
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_module_input_default_value.v:160:23: Cells with pins that are not a variable reference or a constant are not supported with  --fourstate
                                                           : ... note: In instance 't'
  160 |     (.i(32'h6789_2345 + 32'(cyc)),   
      |                       ^
%Error: Exiting due to
